refactor(license): 검색 조건 Admin/User 분리 및 라이센스 검색 API 통합
- AdminLicenseSearchCondition/Target 분리하여 Admin 전용 검색 조건 관리
- LicenseSearchCondition에 softwareId 추가, 2개 API를 searchLicenses로 통합
- LicenseSearchTarget에서 Admin 전용 타겟 제거, LICENSE_MEMO/KEY 추가
- LicenseSummaryResponse에서 latestActiveAt 제거
- LicenseRepository 미사용 메서드 제거 (findByLicenseKey, findByIdIn)